--- a/index.html
+++ b/index.html
@@ -13,8 +13,15 @@
     <link rel="stylesheet" href="css/styles.css">
   </head>
 <body>
-
-  <h1>Hello Coursera!</h1>
+  <header>
+    <nav id="header-nav" class="navbar navbar-default" >
+      <div class="container">
+        
+      </div>
+    </nav>
+  </header>
+  
+  <h1>Hello</h1>
 
   <!-- jQuery (Bootstrap JS plugins depend on it) -->
   <script src="js/jquery-1.11.3.min.js"></script>
