--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <title>Assignment Solutions for module 3</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/stylesheet.css">
   </head>
 <body>
   <header>
