--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
 <body>
   <header>
     <nav id="header-nav" class="navbar navbar-default" >
+      
       <div class="container">
+        <div class="navbar-brand">
+          <a href="index.html"><h1>Food, LLC </h1></a>
+        </div>
         
       </div>
     </nav>
