--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
 <body>
   <header>
-    <nav id="header-nav" class="navbar navbar-default" >
+    <nav id="header1-nav" class="navbar navbar-default" >
       
       <div class="container">
         <div class="navbar-brand" class="pull-left">
@@ -24,7 +24,7 @@
       </div>
     </nav>
     
-    <nav class="navbar navbar-default">
+    <nav  id="header-nav" class="navbar navbar-default">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
