--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <div class="container">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
-       <a class="navbar-brand" href="index.html">Food, LLC</a>
+      <a class="navbar-brand" href="index.html"><h1>Food, LLC</h1></a>
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
