--- a/index.html
+++ b/index.html
@@ -26,11 +26,10 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-     
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="collapse-1">
+    <div class="collapse navbar-collapse" id="collapse-1" class="hidden-md">
       <ul class="nav navbar-nav">
         <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
         <li><a href="#">Link</a></li>
