--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" class="visible-xs" id="collapse-1">
-      <ul class="nav navbar-nav" class="hidden-md">
+      <ul class="nav navbar-nav" class="visible-xs">
         <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
         <li><a href="#">Link</a></li>
         <li class="dropdown">
