--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" class="visible-xs" id="collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Chicken <span class="sr-only">(current)</span></a></li>
+        <li><a href="#">Chicken <span class="sr-only">(current)</span></a></li>
         <li><a href="#">Beef</a></li>
         <li><a href="#">Sushie</a></li>
         
