--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" class="hidden-md-up" id="collapse-1">
-      <ul class="nav navbar-nav">
+      <ul class="nav navbar-nav" class="hidden-md-up">
         <li><a href="#">Chicken <span class="sr-only">(current)</span></a></li>
         <li><a href="#">Beef</a></li>
         <li><a href="#">Sushie</a></li>
