--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" class="hidden-md-up" id="collapse-1">
-      <ul class="nav navbar-nav" class="hidden-md-up">
+    <div class="collapse navbar-collapse"  id="collapse-1">
+      <ul class="nav navbar-nav" >
         <li><a href="#">Chicken <span class="sr-only">(current)</span></a></li>
         <li><a href="#">Beef</a></li>
         <li><a href="#">Sushie</a></li>
