--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse"  id="collapse-1">
       <ul class="nav navbar-nav" >
-        <li><a href="#">Chicken <span class="sr-only">(current)</span></a></li>
-        <li><a href="#">Beef</a></li>
-        <li><a href="#">Sushie</a></li>
+        <li class=".hidden-md-up"><a href="#">Chicken <span class="sr-only">(current)</span></a></li>
+        <li class=".hidden-md-up"><a href="#">Beef</a></li>
+        <li class=".hidden-md-up"><a href="#">Sushie</a></li>
         
       </ul>
       <form class="navbar-form navbar-left">
