--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 </nav>
   </header>
   
-  <h1>Hello</h1>
+  <h1>Our menu</h1>
 
   <!-- jQuery (Bootstrap JS plugins depend on it) -->
   <script src="js/jquery-1.11.3.min.js"></script>
