--- a/index.html
+++ b/index.html
@@ -46,6 +46,15 @@
   </header>
   
   <h1 class="text-center" >Our menu</h1>
+  
+  <section class="container">
+  </section>
+  
+  <section class="container">
+    </section>
+    
+    <section class="container">
+    </section>
 
   <!-- jQuery (Bootstrap JS plugins depend on it) -->
   <script src="js/jquery-1.11.3.min.js"></script>
