--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
   
   <h1 class="text-center" >Our menu</h1>
   
-  <section class="container">
+  <section id="chicken" class="container">
   </section>
   
-  <section class="container">
+  <section id="beef" class="container">
     </section>
     
-    <section class="container">
+    <section id="sushie" class="container">
     </section>
 
   <!-- jQuery (Bootstrap JS plugins depend on it) -->
