--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" class="text-center"  class="hidden-md" id="collapse-1">
-      <ul class="nav navbar-nav" >
+    <div class="collapse navbar-collapse" class="hidden-md" id="collapse-1">
+      <ul class="nav navbar-nav" class="text-center"  >
         <li class="hidden-md"><a href="#">Chicken <span class="sr-only">(current)</span></a></li>
         <li class="hidden-md"><a href="#">Beef</a></li>
         <li class="hidden-md"><a href="#">Sushie</a></li>
