--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" class="hidden-md" id="collapse-1">
-      <ul class="nav navbar-nav" class="text-center"  >
-        <li class="hidden-md"><a href="#">Chicken <span class="sr-only">(current)</span></a></li>
-        <li class="hidden-md"><a href="#">Beef</a></li>
-        <li class="hidden-md"><a href="#">Sushie</a></li>
+      <ul class="nav navbar-nav" >
+        <li class="hidden-md" class="text-center" ><a href="#">Chicken <span class="sr-only">(current)</span></a></li>
+        <li class="hidden-md" class="text-center" ><a href="#">Beef</a></li>
+        <li class="hidden-md" class="text-center" ><a href="#">Sushie</a></li>
         
       </ul>
       <form class="navbar-form navbar-left">
