--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <a class="navbar-brand" href="index.html">Food, LLC</a>
-      <button type="button" class="hidden-md" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapse-1" aria-expanded="false">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapse-1" aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -29,7 +29,7 @@
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" class="hidden-md" id="collapse-1">
+    <div class="collapse navbar-collapse"  id="collapse-1">
       <ul class="nav navbar-nav" >
         <li class="hidden-md" class="text-center" ><a href="#">Chicken <span class="sr-only">(current)</span></a></li>
         <li class="hidden-md" class="text-center" ><a href="#">Beef</a></li>
