--- a/index.html
+++ b/index.html
@@ -36,12 +36,9 @@
         <li class="hidden-md" class="text-center" ><a href="#">Sushie</a></li>
         
       </ul>
-      <form class="navbar-form navbar-left">
-        
-      </form>
    
     </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
+  </div><!-- /.container -->
 </nav>
   </header>
   
