--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse"  id="collapse-1">
+    <div class="collapse navbar-collapse"  id="collapse-1"  class="visible-xs">
       <ul class="nav navbar-nav" class="visible-xs" >
         <li class="hidden-md" class="text-center" ><a href="#">Chicken <span class="sr-only">(current)</span></a></li>
         <li class="hidden-md" class="text-center" ><a href="#">Beef</a></li>
