--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <title>Assignment Solutions for module 3</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/stylesheet.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Ruda" rel="stylesheet">
   </head>
 <body>
   <header>
