--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse"  id="collapse-1"  class="visible-xs">
       <ul class="nav navbar-nav" class="visible-xs" >
-        <li class="hidden-md" class="text-center" ><a href="#chicken">Chicken <span class="sr-only">(current)</span></a></li>
-        <li class="hidden-md" class="text-center" ><a href="#beef">Beef</a></li>
-        <li class="hidden-md" class="text-center" ><a href="#sushie">Sushie</a></li>
+        <li class="hidden-md" class="text-center" ><a href="#chicken1">Chicken <span class="sr-only">(current)</span></a></li>
+        <li class="hidden-md" class="text-center" ><a href="#beef1">Beef</a></li>
+        <li class="hidden-md" class="text-center" ><a href="#sushie1">Sushie</a></li>
         
       </ul>
    
@@ -46,7 +46,7 @@
   <h1 class="text-center" >Our menu</h1>
   
   <section id="chicken" class="container">
-    <h2  class="text-center">Chicken</h2>
+    <h2 id="chicken1" class="text-center">Chicken</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce dignissim dui efficitur ipsum ullamcorper convallis. Aliquam semper lorem et libero efficitur luctus. Morbi tellus nisl, eleifend eget tincidunt eget, iaculis eu mauris. Maecenas pulvinar non tortor et vehicula. Praesent sed vestibulum leo, non tristique risus. Duis consequat arcu in dui consectetur tempor. Nulla aliquam tristique elementum. Etiam eget sem tellus. Curabitur a lectus ornare libero eleifend venenatis. Sed gravida nunc nec ipsum suscipit vestibulum. Integer vel dui quis risus aliquet semper. Duis scelerisque quam urna, sed finibus arcu semper et. Sed a consectetur lacus. Pellentesque porta ante vitae libero ornare fermentum. Phasellus bibendum pulvinar nunc quis cursus.
 
 Donec venenatis ultrices purus nec facilisis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Vestibulum commodo, magna eu consequat sollicitudin, mi massa pretium leo, in egestas leo tellus non mi. Pellentesque sed tincidunt risus. Etiam egestas, odio sed tincidunt posuere, lacus dolor hendrerit urna, tincidunt accumsan enim mauris sed ligula. Duis dictum mauris non purus rutrum vulputate.
@@ -61,7 +61,7 @@ Maecenas ac risus nibh. Pellentesque nec eleifend libero, non blandit massa. Int
   </section>
   
   <section id="beef" class="container">
-     <h2  class="text-center">Beef</h2>
+     <h2  id="beef1" class="text-center">Beef</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce dignissim dui efficitur ipsum ullamcorper convallis. Aliquam semper lorem et libero efficitur luctus. Morbi tellus nisl, eleifend eget tincidunt eget, iaculis eu mauris. Maecenas pulvinar non tortor et vehicula. Praesent sed vestibulum leo, non tristique risus. Duis consequat arcu in dui consectetur tempor. Nulla aliquam tristique elementum. Etiam eget sem tellus. Curabitur a lectus ornare libero eleifend venenatis. Sed gravida nunc nec ipsum suscipit vestibulum. Integer vel dui quis risus aliquet semper. Duis scelerisque quam urna, sed finibus arcu semper et. Sed a consectetur lacus. Pellentesque porta ante vitae libero ornare fermentum. Phasellus bibendum pulvinar nunc quis cursus.
 
 Donec venenatis ultrices purus nec facilisis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Vestibulum commodo, magna eu consequat sollicitudin, mi massa pretium leo, in egestas leo tellus non mi. Pellentesque sed tincidunt risus. Etiam egestas, odio sed tincidunt posuere, lacus dolor hendrerit urna, tincidunt accumsan enim mauris sed ligula. Duis dictum mauris non purus rutrum vulputate.
@@ -76,7 +76,7 @@ Maecenas ac risus nibh. Pellentesque nec eleifend libero, non blandit massa. Int
     </section>
     
     <section id="sushie" class="container">
-       <h2  class="text-center">Shushie</h2>
+       <h2 id="sushie1"  class="text-center">Shushie</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce dignissim dui efficitur ipsum ullamcorper convallis. Aliquam semper lorem et libero efficitur luctus. Morbi tellus nisl, eleifend eget tincidunt eget, iaculis eu mauris. Maecenas pulvinar non tortor et vehicula. Praesent sed vestibulum leo, non tristique risus. Duis consequat arcu in dui consectetur tempor. Nulla aliquam tristique elementum. Etiam eget sem tellus. Curabitur a lectus ornare libero eleifend venenatis. Sed gravida nunc nec ipsum suscipit vestibulum. Integer vel dui quis risus aliquet semper. Duis scelerisque quam urna, sed finibus arcu semper et. Sed a consectetur lacus. Pellentesque porta ante vitae libero ornare fermentum. Phasellus bibendum pulvinar nunc quis cursus.
 
 Donec venenatis ultrices purus nec facilisis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Vestibulum commodo, magna eu consequat sollicitudin, mi massa pretium leo, in egestas leo tellus non mi. Pellentesque sed tincidunt risus. Etiam egestas, odio sed tincidunt posuere, lacus dolor hendrerit urna, tincidunt accumsan enim mauris sed ligula. Duis dictum mauris non purus rutrum vulputate.
