--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse"  id="collapse-1"  class="visible-xs">
+    <div class="collapse navbar-collapse"  id="collapse-1">
       <ul class="nav navbar-nav" >
         <li class="hidden-md" class="text-center" ><a href="#chicken1">Chicken <span class="sr-only">(current)</span></a></li>
         <li class="hidden-md" class="text-center" ><a href="#beef1">Beef</a></li>
